--- a/Lesson3-CSS-Positioning/homework/homework.css
+++ b/Lesson3-CSS-Positioning/homework/homework.css
@@ -8,36 +8,65 @@ in this folder, you are in the wrong place.
 
 /* We will start this one off for you: */
 #exerciseOne {
-
+text-align: center;
 }
 
 
 /* Exercise Two: Positioning a Header Bar*/
 
-/* Place code here */
+#exerciseTwo {
+display: none;
+}
 
 
 
 /* Exercise Three: */
-
-/* Place code here */
-
-
+.moveBoxContainer{
+  position: relative;
+}
+#exerciseThree {
+top: 100px;
+left: 200px;
+position: absolute;
+}
 
 /* Exercise Four: */
-
-/* Place code here */
-
-
+#exerciseFour {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+}
 
 /* Exercise Five */
 
-/* Place code here */
+#exerciseFive {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 
 
 /* Exercise Six */
+#exerciseFive {
+  flex-direction: row-reverse;
+}
 
+/* Exercise Seven */
 #exerciseSeven {
+  justify-content: center;
+  flex-direction: column-reverse;
   display: flex;
+}
+#itemOne {
+align-self: flex-end;
+}
+#itemTwo {
+align-self: flex-start;
+}
+#itemThree {
+align-self: flex-start;
+}
+#itemFour {
+align-self: flex-end;
 }
